MIT-815: more fixes for carousel and content list on mobile

--- a/components/carousel/carousel.css
+++ b/components/carousel/carousel.css
@@ -5,7 +5,7 @@
     transition: opacity 0.2s ease;
 
     @media ($mdMin) {
-      margin-bottom: rem(40);
+      margin-bottom: 13%;
     }
 
     &.isVisible {
